[package]
name = "tokio-coap"
version = "0.1.1"
authors = ["Patrick Barrett <patrick@psbarrett.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/azdle/tokio-coap"
description = """
Low-level protocol implementaion of the Constrained Application Prorocol (CoAP)
built on top of tokio-core.
"""

[dependencies]
futures = "0.1.19"
tokio = "0.1.4"
tokio-io = "0.1.6"
bytes = "0.4.5"
env_logger = "0.4.3"
smallvec = "0.5.0"
